# rename_to_avoid_collision

./: .gitignore  LICENSE  README.md  pyproject.toml  rename_to_avoid_collision.py
rename_to_avoid_collision/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
